  - New Command: /t ranklist {townname}
    - View the ranklist of another town.
  - New Command: /res tax {resname}
    - View the tax requirements of another resident.
0.97.1.7:
  - Fix ChatTools formatTitle not handling some languages properly on startup.
0.97.1.8:
  - Raise language level to 16 using jabel, courtesy of Warriorrrr with PR #5259.
  - Fix bankhistory books not showing correct final balance.
    - Closes #5269.
  - Fix typos in TownyFormatter, courtesy of LudwigHornslied with PR #5270.
  - Fix missing tabcomplete for /res jail paybail.
  - Fix nation merging not performing optional proximity test.
  - Add Resident#isOnline, courtesy of Warriorrrr with PR #5273.
  - Prevent empty messages from being sent, courtesy of Warriorrrr with PR #5272.
  - Bump language files to 0.122.
  - New Language added to Crowdin: Vietnamese.
  - Update maven-shade-plugin to a version which supports Java 16.
  - Fix /res jail paybail command not sending confirmation when bail costs are more than 0.
    - Closes #5265.
  - Fix jails not loading correctly.
  - Remove physical-player-interactions from automatically being treated as switch actions.
    - Pressure plates are already included in the switch_id list by default and should cause no issue to existing servers.
    - Closes #5140.
  - Fix /tw toggle revertunclaim not stopping reverts in progress.
0.97.1.9:
  - API: Add new MetaDataUtil, to ease getting and setting metadata on TownyObjects.
  - Fix elements added via the StatusScreenEvents additionalLines not appearing on the status screens in some situations.
0.97.1.10:
  - Fix incorrect messages being shown to towns when their peaceful status is disallowed.
    - Closes #5286.
  - Make (PvP), (No PvP) in the chunk notifications use the language string.
  - Make the remainder of the chunk notifications messages use the players' locale.
  - Disable citizens compatability if citizens gets disabled, courtesy of Warriorrrr with PR #5289.